# Chiren

./: .gitignore  .mcp.json  README.md
backend/: CLAUDE.md  main.py  pyproject.toml
backend/apps/: __init__.py
backend/apps/chat/: router.py  schemas.py  service.py  test_cli.py
backend/apps/config/: __init__.py  router.py  schemas.py
backend/apps/conversation_message/: __init__.py  router.py
backend/apps/cover_letter/: __init__.py  prompt.py  router.py  schemas.py  service.py
backend/apps/export/: __init__.py  browser_manager.py  browser_pool.py  pdf_generator.py  router.py  service.py
backend/apps/interview/: __init__.py  chat.py  prompt.py  router.py  schemas.py  service.py  task_service.py
backend/apps/jd_analysis/: __init__.py  call_llm.py  prompt.py  router.py  schemas.py  service.py
backend/apps/parser/: __init__.py  call_llm.py  pdf_parser.py  prompt.py  router.py  schemas.py  service.py  sse.py  state.py  storage.py
backend/apps/resume/: __init__.py  router.py  schemas.py  service.py
backend/apps/resume_assistant/: __init__.py  agent_service.py  conversation_store.py  prompt.py  router.py  schemas.py  service.py  task_service.py  test_cli.py
backend/apps/resume_section/: __init__.py  router.py
backend/apps/template/: __init__.py  router.py
backend/apps/work/: __init__.py  router.py  service.py  sse.py
backend/shared/: __init__.py  database.py  models.py  resume_prompt.py  resume_section_factory.py  task_state.py
backend/shared/api/: __init__.py  client.py  errors.py  openai_client.py  usage.py
backend/shared/exceptions/: base.py  (+1 more)
(+223 files in other folders)
