[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "openai>=2.30.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.42.0",
]

[tool.ruff.lint]
select = ["I", "DOC", "FAST", "UP"]
